notify service
